--- a/ProjetoRecuperação/nbproject/project.properties
+++ b/ProjetoRecuperação/nbproject/project.properties
@@ -42,12 +42,14 @@ file.reference.javax.activation-api-1.2.0.jar=lib/javax.activation-api-1.2.0.jar
 file.reference.javax.persistence-api-2.2.jar=lib/javax.persistence-api-2.2.jar
 file.reference.jboss-logging-3.3.2.Final.jar=lib/jboss-logging-3.3.2.Final.jar
 file.reference.jboss-transaction-api_1.2_spec-1.1.1.Final.jar=lib/jboss-transaction-api_1.2_spec-1.1.1.Final.jar
+file.reference.mysql-connector-java-5.1.46.jar=lib/mysql-connector-java-5.1.46.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
+    ${file.reference.mysql-connector-java-5.1.46.jar}:\
     ${file.reference.antlr-2.7.7.jar}:\
     ${file.reference.byte-buddy-1.8.12.jar}:\
     ${file.reference.classmate-1.3.4.jar}:\
